Feat : youthpolicy sync 시 카테고리 저장 & 응답형태 apiresponse 수정